// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-checkbox"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default single checkbox renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-checkbox ecl-checkbox--invalid ecl-checkbox--single"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#check"
          />
        </svg>
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
      <span
        aria-label="required"
        class="ecl-form-label__required"
        role="note"
      >
        *
      </span>
    </label>
  </div>
  <div
    class="ecl-feedback-message"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#error"
      />
    </svg>
      Error message for the group
  </div>
</jest>
`;
